tests/fixtures/invalid/dict_neg.py
# Cannot use unary - on Dict[str, int]
x: dict = -{"a": 1}
